# gflow-studio

./: README.md  index.html  package-lock.json  package.json  vite.config.ts
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src/components/layout/: CanvasEditor.tsx  ChatPanel.tsx  StatusBar.tsx  TimelineEditor.tsx
src/components/layout/__tests__/: CanvasEditor.test.tsx  ChatPanel.test.tsx  TimelineEditor.test.tsx
src/components/shared/: ErrorBoundary.tsx
src/components/shared/__tests__/: ErrorBoundary.test.tsx
src/services/: mcpClient.ts
src/stores/: app.ts  timeline.ts
src/stores/__tests__/: stores.test.ts
src/styles/: globals.css
src/test/: setup.ts
src/types/: api.ts  timeline.ts
