[package]
name = "gflow-studio"
version = "0.1.0"
description = "Gflow Studio — filmmaking desktop client for Google Flow"
authors = ["ffroliva"]
edition = "2021"

[lib]
name = "gflow_studio_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31.0", features = ["bundled"] }
tokio = { version = "1", features = ["full"] }
